# seeshell.py

./: README.md  pyproject.toml
src/: main.py
